# agentgate

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: loadtest.js  mock_upstream.py  report.py  run.py  stats.py
docs/: _config.yml  benchmarks.md  index.md  integration.md
eval/redteam/: __init__.py  __main__.py  agreement.py  classifier_eval.py  extra_probes_eval.py  harness.py  judge.py  label_app.py  llm_eval.py  loader.py  oss_traffic_gen.py  report.py  route_eval.py  sampling.py  schema.py
eval/redteam/corpus/: authored.jsonl  fp_capture.frozen.jsonl  gold_set.jsonl  obfuscated_tool_probe.jsonl  security_meta_probe.jsonl  sensitivity_corpus.jsonl
eval/redteam/corpus/public/: SOURCES.md  _vendor_deepset.py  deepset_prompt_injections.jsonl  garak.jsonl  seed_mutate.jsonl
eval/redteam/corpus/seeds/: frozen-readme-urls.txt
eval/redteam/sections/: local_llm_guard.md
scripts/: run_bench.sh
src/agentgate/: __main__.py  app.py  config.py  pricing.py
src/agentgate/audit/: models.py  store.py
src/agentgate/limits/: backend.py  spend.py
src/agentgate/observability/: metrics.py  otel.py
src/agentgate/pep/: __init__.py  mcp_server.py  safe_http_request.py
src/agentgate/proxy/: forwarder.py  streaming.py
src/agentgate/routing/: providers.py  router.py
src/agentgate/security/: capture.py  classifier.py  content_crypto.py  egress_policy.py  injection.py  llm_guard.py  model_guard.py  redaction.py  skill_inspector.py
tests/: test_app_pipeline.py  test_audit_pricing.py  test_bench.py  test_content_audit.py  test_egress_policy.py  test_forwarder.py  test_llm_guard_integration.py  test_pep_safe_http_request.py  test_per_key_guard.py  test_redaction.py  test_redteam.py  test_routing.py  test_security_limits.py  test_sensitivity_corpus.py  test_skill_inspector.py
